# presto-mcp-server

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
skills/presto-usage/: SKILL.md
src/: index.ts
src/presto_mcp/: __init__.py  __main__.py  bc3.py  presto_com.py  server.py
src/services/: bc3-parser.ts
src/tools/: bc3-tools.ts  webapi-tools.ts
tests/: test_bc3.py
